# craftbeer

./: .gitignore  README.md  application.conf  craftbeer.cabal  package.yaml  request.http  stack.yaml
app/: DevelMain.hs  devel.hs  main.hs
config/: keter.yml  models.persistentmodels  routes  settings.yml  test-settings.yml
src/: Application.hs  Auth.hs  Craftbeer.hs  Db.hs  Domain.hs  Foundation.hs  Main.hs  Views.hs
src/Handler/: User.hs
src/controller/: AgentsController.hs  IngredientsController.hs  RecipesController.hs  SensorsController.hs  StagesController.hs
src/db/: Agents.hs  Db.hs  Ingredients.hs  Recipes.hs  Sensors.hs  Stages.hs  Users.hs
src/tests/: recipes.http
