name:          craftbeer
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple


executable          craftbeer
    hs-source-dirs: src
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N 
    extensions:     OverloadedStrings
    build-depends:  base                          >=4.6 && <4.7
                    , scotty                        >= 0.9.1
                    , bytestring                    >= 0.9        && < 0.11
                    , text                          >= 0.11       && < 2.0
                    , postgresql-simple             >= 0.4.10.0
                    , aeson                         >= 0.6        && < 0.9
                    , transformers                  >= 0.4.3.0
                    , wai                           >= 3.0.2.3
                    , wai-middleware-static         >= 0.7.0.1
                    , wai-extra                     >= 3.0.7
                    , resource-pool                 >= 0.2.3.2
                    , configurator                  >= 0.3.0.0
                    , MissingH                      >= 1.3.0.1
                    , lens                          >=4.5
                    , lens-aeson                    >=1.0.2
                    , wreq                          >=0.5.3.2
                    , http-types

    other-modules: 
        Auth Db Domain Views


                  
